# Galaxy

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.h  config.py  config.status  configure  configure.ac  core  install_manifest.txt  test_asio  test_map  test_sig  test_timer
FindGalaxy/: GalaxyConfig.cmake
components/: CMakeLists.txt  config.py
examples/maze_1/src/: main.cpp
src/: Makefile  Makefile.am
src/gal/: command.cpp  command.h  config.h  config.h.in  define.h  except.cpp  except.h  flag.cpp  flag.h  free.cpp  free.h  map.cpp  map.h  stack_trace.cpp  stack_trace.h  util.h
src/gal/asio/: message.cpp  message.h  message.hpp
src/gal/control/: control.cpp  control.h
src/gal/maze/: description.cpp  rk.cpp
src/gal/network/: client.cpp  client.h  communicating.cpp  communicating.h  message.cpp  message.h  message_ext.h  serial.h  serializeable.h  server.cpp  server.h  vector.h
src/gal/sig/: connection.h  signal.h
src/gal/timer/: timer.h  timer_set.cpp  timer_set.h
src/galaxy/: command.cpp  command.hpp  config.hpp  except.cpp  flag.hpp  free.cpp  gal.hpp  map.hpp  stack_trace.cpp
src/galaxy/control/: control.cpp  control.hpp
src/galaxy/maze/: base.cpp  base.hpp  dfs.cpp  dfs.hpp
src/galaxy/network/: client.cpp  client.hpp  communicating.cpp  serial.hpp  (+5 more)
test/: CMakeLists.txt
test/asio/: CMakeLists.txt  main.cpp
test/commandline/: CMakeLists.txt  main.cpp
test/map/: CMakeLists.txt  main.cpp
test/sig/: CMakeLists.txt  main.cpp
test/timer/: CMakeLists.txt  main.cpp
tmp/: galaxy-cfgcmd.txt
(+25 files in other folders)
